--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+@import url('https://fonts.googleapis.com/css2?family=Jua:wght@400&display=swap');
+@import "primeicons/primeicons.css";
+
+
+*{
+	margin: 0;
+	box-sizing: border-box;
+	font-family: sans-serif;
+}
