--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -14,33 +14,6 @@ header {
 		position: absolute;
 		z-index: -1;
 	}
-	
-	nav {
-		width: 100%;
-	}
-
-	nav ul {
-		display: flex;
-		height: 100px;
-		justify-content: space-around;
-		align-items: center;
-		list-style-type: none;
-		padding: 10px 0;
-		margin: 0;
-	}
-	nav ul li {
-		color: #ffffff; 
-		font-size: 2rem;
-		font-family: 'Jua', sans-serif;
-		cursor: pointer;
-	}
-	nav ul li:hover {
-		color: #ffae34; 
-
-	}
-
-
-
 }
 
 .body-main{
@@ -49,9 +22,7 @@ header {
 		width: 100%;
 		display:flex;
 		justify-content: center;
-		font-size: 2.5rem;
-		font-weight: normal;
-		color: #ffffff;
+
 		padding-bottom: 10px;
 	}
 	article{
@@ -66,7 +37,7 @@ header {
 
 		}
 		.pet-img{
-			width: 150px;
+			width: 250px;
 			height: auto;
 			margin: 10px auto; 
 		}
@@ -117,6 +88,129 @@ header {
 		box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.31);
 	}
 	
+	.p-menubar {
+		padding: 0.5rem;
+		background: #0075eb;
+		border: 0px solid #e5e7eb;
+		border-radius: 0px;
 
+		width: 100%;
+		justify-content: center;
+	  }
+
+	  .p-menubar .p-submenu-list {
+		padding: 0.5rem 0;
+		background: #ffffff;
+		border: 0 none;
+		box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+		width: 12.5rem;
+		border-radius: 6px;
+	  }
+	  .p-menubar-root-list {
+		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
+		gap: 100px;
+	}
+	.p-submenu-icon{
+		font-size:1.4rem;
+		color: #ffffff
+
+	}
+
+	.p-menuitem-text{
+		font-size: 1.6rem;
+		font-weight: normal;
+		color: rgb(255, 255, 255);
+	}
+	.p-menuitem-icon{
+		font-size: 1.8rem;
+		margin-right: 5px;
+		color: #ffffff;
+	}
+	
+	.p-menubar .p-menuitem-link {
+		align-items: baseline;
+	}
+
+	.p-menubar .p-submenu-list {
+		padding: 0.4rem 0;
+		background: #0075eb;
+		border: 1px solid #ffffff;
+		box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+		width: 100%;
+		border-radius: 6px;
+		
+
+		.p-menuitem-text{
+			font-size: 1.2rem;
+			font-weight: normal;
+			color: rgb(255, 255, 255);
+		}
+		.p-menuitem-icon{
+			font-size: 1.2rem;
+			margin-right: 5px;
+			color: #ffffff;
+		}
+	}
+
+	.p-menubar .p-menubar-root-list > .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover {
+		color: #ffffff;
+		background: #ffae34;
+	  }
+
+	.p-menubar .p-menubar-root-list > .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-menuitem-text {
+	color: #ffffff;
+	}
+
+	.p-menubar .p-menubar-root-list > .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-menuitem-icon,
+	.p-menubar .p-menubar-root-list > .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-submenu-icon {
+		color: #ffffff;
+	}
+
+	.p-menubar .p-menuitem.p-highlight.p-focus > .p-menuitem-content {
+		background: #ffae34;
+		}
+		.p-menubar .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content {
+		color: #f3f4f6;
+		background: #0075eb;
+		}
+		.p-menubar .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-menuitem-text {
+		color: #f3f4f6;
+		}
+		.p-menubar .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-menuitem-icon,
+	.p-menubar .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-submenu-icon {
+		color: #f3f4f6;
+		}
+		.p-menubar .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover {
+		color: #ffae34;
+		background: #f3f4f6;
+		}
+		.p-menubar .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-menuitem-text {
+		color: #ffae34;
+		}
+		.p-menubar .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-menuitem-icon,
+	.p-menubar .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-submenu-icon {
+		color: #ffae34;
+		}
+
+/* Remove fundo branco quando passar o mouse (hover) */
+.p-menubar-root-list > .p-menuitem > a.p-menuitem-link:hover {
+    background-color: transparent !important;
+    box-shadow: none !important;
+}
+
+/* Remove o foco de seleção do item (focus) */
+.p-menubar-root-list > .p-menuitem > a.p-menuitem-link:focus {
+    background-color: transparent !important;
+    box-shadow: none !important;
+    outline: none !important;
+}
+
+/* Remove o fundo de itens com submenu quando são clicados ou focados */
+.p-menubar-root-list > .p-menuitem.p-menuitem-active > a.p-menuitem-link {
+    background-color: transparent !important;
+    box-shadow: none !important;
+}
 
 }
