--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,216 +1,262 @@
-.main-container{
-	background: #ffae34;
-	height: 100vh;
-	width: 100%;
+.main-container {
+  background: #ffae34;
+  height: 100vh;
+  width: 100%;
 }
 
-	
-header {	
-	position: relative;
-	z-index: 2;	
-	img {
-		width: 100%;
-		height: 150px;
-		position: absolute;
-		z-index: -1;
-	}
+header {
+  position: relative;
+  z-index: 2;
+  img {
+    width: 100%;
+    height: 150px;
+    position: absolute;
+    z-index: -1;
+  }
 }
 
-.body-main{
-	padding-top: 5%;
-	h1{
-		width: 100%;
-		display:flex;
-		justify-content: center;
+.body-main {
+  padding-top: 5%;
+  h1 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+	font-size: 2.5rem;
+    padding-bottom: 10px;
+	color: white;
+  }
+  article {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 
-		padding-bottom: 10px;
-	}
-	article{
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		width: 100%;
-		height: 100%;
-
-		.container{
-			width: 70%;
-
-		}
-		.pet-img{
-			width: 250px;
-			height: auto;
-			margin: 10px auto; 
-		}
-	}
-
+    .container {
+      width: 70%;
+    }
+    .pet-img {
+      width: 250px;
+      height: auto;
+      margin: 10px auto;
+    }
+  }
 }
 
-::ng-deep{
-	.p-datatable .p-datatable-thead > tr > th {
-		text-align: left;
-		padding: 1.2rem 1rem;
-		border: 1px solid #e5e7eb;
-		border-width: 0 0 1px 0;
-		font-size: 1.2rem;
-		font-weight: 700;
-		color: #ffffff;
-		background: #0075eb;
-		transition: box-shadow 0.2s;
-	}
+::ng-deep {
+  .p-datatable .p-datatable-thead > tr > th {
+    text-align: left;
+    padding: 1.2rem 1rem;
+    border: 1px solid #e5e7eb;
+    border-width: 0 0 1px 0;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: #ffffff;
+    background: #0075eb;
+    transition: box-shadow 0.2s;
+  }
 
-	.p-datatable-wrapper{
-		box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.31);
-		border-radius: 10px;
-	}
-	.p-paginator {
-		background: transparent;
-		color: #6b7280;
-		border: none; 
-		border-width: 0;
-		padding: 0.5rem 0rem;
-		border-radius: 6px;
-	}
+  .p-datatable-wrapper {
+    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.31);
+    border-radius: 10px;
+  }
+  .p-paginator {
+    background: transparent;
+    color: #6b7280;
+    border: none;
+    border-width: 0;
+    padding: 0.5rem 0rem;
+    border-radius: 6px;
+  }
 
-	.p-paginator {
-		display: flex;
-		align-items: center;
-		justify-content: right;
-		flex-wrap: wrap;
-	}
+  .p-paginator {
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    flex-wrap: wrap;
+  }
 
-	.p-paginator .p-paginator-pages .p-paginator-page.p-highlight {
-		background: #0075eb;
-		border-color: #EFF6FF;
-		color: #EFF6FF;
-	}
+  .p-paginator .p-paginator-pages .p-paginator-page.p-highlight {
+    background: #0075eb;
+    border-color: #eff6ff;
+    color: #eff6ff;
+  }
 
-	.p-dropdown {
-		box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.31);
-	}
-	
-	.p-menubar {
-		padding: 0.5rem;
-		background: #0075eb;
-		border: 0px solid #e5e7eb;
-		border-radius: 0px;
+  .p-dropdown {
+    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.31);
+  }
 
-		width: 100%;
-		justify-content: center;
-	  }
+  .p-menubar {
+    padding: 0.5rem;
+    background: transparent;
+    border: 0px solid #e5e7eb;
+    border-radius: 0px;
 
-	  .p-menubar .p-submenu-list {
-		padding: 0.5rem 0;
-		background: #ffffff;
-		border: 0 none;
-		box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
-		width: 12.5rem;
-		border-radius: 6px;
-	  }
-	  .p-menubar-root-list {
-		display: flex;
-		align-items: center;
-		flex-wrap: wrap;
-		gap: 100px;
-	}
-	.p-submenu-icon{
-		font-size:1.4rem;
-		color: #ffffff
+    width: 100%;
+    justify-content: center;
+  }
 
-	}
+  .p-menubar .p-submenu-list {
+    padding: 0.5rem 0;
+    background: #ffffff;
+    border: 0 none;
+    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+    width: 12.5rem;
+    border-radius: 6px;
+  }
+  .p-menubar-root-list {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 100px;
+  }
+  .p-submenu-icon {
+    font-size: 1.4rem;
+    color: #ffffff;
+  }
 
-	.p-menuitem-text{
-		font-size: 1.6rem;
-		font-weight: normal;
-		color: rgb(255, 255, 255);
-	}
-	.p-menuitem-icon{
-		font-size: 1.8rem;
-		margin-right: 5px;
-		color: #ffffff;
-	}
-	
-	.p-menubar .p-menuitem-link {
-		align-items: baseline;
-	}
+  .p-menuitem-text {
+    font-size: 1.6rem;
+    font-weight: normal;
+    color: rgb(255, 255, 255);
+  }
+  .p-menuitem-icon {
+    font-size: 1.8rem;
+    margin-right: 5px;
+    color: #ffffff;
+  }
 
-	.p-menubar .p-submenu-list {
-		padding: 0.4rem 0;
-		background: #0075eb;
-		border: 1px solid #ffffff;
-		box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
-		width: 100%;
-		border-radius: 6px;
-		
+  .p-menubar .p-menuitem-link {
+    align-items: baseline;
+  }
 
-		.p-menuitem-text{
-			font-size: 1.2rem;
-			font-weight: normal;
-			color: rgb(255, 255, 255);
-		}
-		.p-menuitem-icon{
-			font-size: 1.2rem;
-			margin-right: 5px;
-			color: #ffffff;
-		}
-	}
+  .p-menubar .p-submenu-list {
+    padding: 0.4rem 0;
+    background: #0075eb;
+    border: 1px solid #ffffff;
+    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+    width: 100%;
+    border-radius: 6px;
 
-	.p-menubar .p-menubar-root-list > .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover {
-		color: #ffffff;
-		background: #ffae34;
-	  }
+    .p-menuitem-text {
+      font-size: 1.2rem;
+      font-weight: normal;
+      color: rgb(255, 255, 255);
+    }
+    .p-menuitem-icon {
+      font-size: 1.2rem;
+      margin-right: 5px;
+      color: #ffffff;
+    }
+  }
 
-	.p-menubar .p-menubar-root-list > .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-menuitem-text {
-	color: #ffffff;
-	}
+  //Hover sobre a opcao que tem dropdown
+  .p-menubar .p-menuitem.p-highlight > .p-menuitem-content {
+    color: #1d4ed8;
+    background: #ffae34;
+  }
 
-	.p-menubar .p-menubar-root-list > .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-menuitem-icon,
-	.p-menubar .p-menubar-root-list > .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-submenu-icon {
-		color: #ffffff;
-	}
+  //Hover sobre a opcao que nao tem dropdown
+  .p-menubar
+    .p-menubar-root-list
+    > .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover {
+    color: #ffffff;
+    background: #ffae34;
+  }
 
-	.p-menubar .p-menuitem.p-highlight.p-focus > .p-menuitem-content {
-		background: #ffae34;
-		}
-		.p-menubar .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content {
-		color: #f3f4f6;
-		background: #0075eb;
-		}
-		.p-menubar .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-menuitem-text {
-		color: #f3f4f6;
-		}
-		.p-menubar .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-menuitem-icon,
-	.p-menubar .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-submenu-icon {
-		color: #f3f4f6;
-		}
-		.p-menubar .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover {
-		color: #ffae34;
-		background: #f3f4f6;
-		}
-		.p-menubar .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-menuitem-text {
-		color: #ffae34;
-		}
-		.p-menubar .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-menuitem-icon,
-	.p-menubar .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-submenu-icon {
-		color: #ffae34;
-		}
+  //Hover texto que nao tem dropdown
+  .p-menubar
+    .p-menubar-root-list
+    > .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-text {
+    color: #ffffff;
+    background: #ffae34;
+  }
 
-/* Remove fundo branco quando passar o mouse (hover) */
-.p-menubar-root-list > .p-menuitem > a.p-menuitem-link:hover {
-    background-color: transparent !important;
-    box-shadow: none !important;
-}
+  //Hover icone que nao tem dropdown
+  .p-menubar
+    .p-menubar-root-list
+    > .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-icon,
+  .p-menubar
+    .p-menubar-root-list
+    > .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-submenu-icon {
+    color: #ffffff;
+    background: #ffae34;
+  }
 
-/* Remove o foco de seleção do item (focus) */
-.p-menubar-root-list > .p-menuitem > a.p-menuitem-link:focus {
-    background-color: transparent !important;
-    box-shadow: none !important;
-    outline: none !important;
-}
+  //item selecionado no focus
+  .p-menubar .p-menuitem.p-highlight.p-focus > .p-menuitem-content {
+    background: #ffae34;
+  }
 
-/* Remove o fundo de itens com submenu quando são clicados ou focados */
-.p-menubar-root-list > .p-menuitem.p-menuitem-active > a.p-menuitem-link {
-    background-color: transparent !important;
-    box-shadow: none !important;
-}
+  //toda area selecionado, "onFocus"
+  .p-menubar
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content {
+    color: #f3f4f6;
+    background: transparent;
+  }
 
+  //label principal selecionado, "onFocus"
+  .p-menubar
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-menuitem-text {
+    color: #f3f4f6;
+  }
+
+  //icones principais selecionado, "onFocus"
+  .p-menubar
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-menuitem-icon,
+  .p-menubar
+    .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
+    > .p-menuitem-content
+    .p-menuitem-link
+    .p-submenu-icon {
+    color: #f3f4f6;
+  }
+
+  //Hover sobre o itens dropdown
+  .p-menubar
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover {
+    color: #ffae34;
+    background: #f3f4f6;
+  }
+
+  //cor do texto do menu do dropdown
+  .p-menubar
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-text {
+    color: #ffae34;
+  }
+
+  //cor do icone do menu do dropdown
+  .p-menubar
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-menuitem-icon,
+  .p-menubar
+    .p-menuitem:not(.p-highlight):not(.p-disabled)
+    > .p-menuitem-content:hover
+    .p-menuitem-link
+    .p-submenu-icon {
+    color: #ffae34;
+  }
 }
