--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,6 @@
 <section class="main-container">
-		<header>
-			<img src="images/petShop/onda.png" alt="">
-			<p-menubar [model]="items" />
-		</header>
+		
+		<app-header> </app-header>
 		
 		<div class="body-main">
 		<h1>Tabela de Clientes</h1>
