--- a/src/app/components/register-user/register-user.component.scss
+++ b/src/app/components/register-user/register-user.component.scss
@@ -1,28 +1,30 @@
 .main-container {
     background: #ffae34;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
   }
   
-  header {
-    position: relative;
-    z-index: 4;
-    img {
-      width: 100%;
-      height: 150px;
-      position: absolute;
-      z-index: -1;
-    }
-  }
   
   .body-main {
     padding-top: 5%;
+
+    .body{
+      display: flex;
+    }
+
     h1 {
       width: 100%;
       display: flex;
       justify-content: center;
       font-size: 2.5rem;
       padding-bottom: 10px;
+      color: white;
+    }
+
+    label{
+      font-weight: bold;
+      margin-bottom: 8px;
+      font-size: 16px;
       color: white;
     }
     article {
@@ -44,6 +46,9 @@
             height: 500px;
             border-radius: 10px;
             gap: 20px;
+            padding: 24px;
+            box-shadow: -1px 1px 10px 0px  rgba(0, 0, 0, 0.5);
+
             article{
                 justify-content: center;
                 align-items: left;
@@ -52,14 +57,20 @@
                 label{
                     display: flex;
                     justify-content: left;
-                    width: 90%;
+                    width: 100%;
 
                 }
                 input,p-multiSelect{
-                    width: 90%;
+                    width: 100%;
                 }
                 
             }
+        }
+        .btnFooter{
+          display: flex;
+          justify-content: right;
+          width: 100%;
+
         }
       }
       .pet-img {
@@ -70,179 +81,11 @@
     }
   }
   
-  ::ng-deep {
-    .p-menubar {
-      padding: 0.5rem;
-      background: transparent;
-      border: 0px solid #e5e7eb;
-      border-radius: 0px;
-  
+
+  ::ng-deep{
+    
+    .p-multiselect-label{
       width: 100%;
-      justify-content: center;
-    }
-  
-    .p-menubar .p-submenu-list {
-      padding: 0.5rem 0;
-      background: #ffffff;
-      border: 0 none;
-      box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
-      width: 12.5rem;
-      border-radius: 6px;
-    }
-    .p-menubar-root-list {
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 100px;
-    }
-    .p-submenu-icon {
-      font-size: 1.4rem;
-      color: #ffffff;
-    }
-  
-    .p-menuitem-text {
-      font-size: 1.6rem;
-      font-weight: normal;
-      color: rgb(255, 255, 255);
-    }
-    .p-menuitem-icon {
-      font-size: 1.8rem;
-      margin-right: 5px;
-      color: #ffffff;
-    }
-  
-    .p-menubar .p-menuitem-link {
-      align-items: baseline;
-    }
-  
-    .p-menubar .p-submenu-list {
-      padding: 0.4rem 0;
-      background: #0075eb;
-      border: 1px solid #ffffff;
-      box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
-      width: 100%;
-      border-radius: 6px;
-  
-      .p-menuitem-text {
-        font-size: 1.2rem;
-        font-weight: normal;
-        color: rgb(255, 255, 255);
-      }
-      .p-menuitem-icon {
-        font-size: 1.2rem;
-        margin-right: 5px;
-        color: #ffffff;
-      }
-    }
-  
-    //Hover sobre a opcao que tem dropdown
-    .p-menubar .p-menuitem.p-highlight > .p-menuitem-content {
-      color: #1d4ed8;
-      background: #ffae34;
-    }
-  
-    //Hover sobre a opcao que nao tem dropdown
-    .p-menubar
-      .p-menubar-root-list
-      > .p-menuitem:not(.p-highlight):not(.p-disabled)
-      > .p-menuitem-content:hover {
-      color: #ffffff;
-      background: #ffae34;
-    }
-  
-    //Hover texto que nao tem dropdown
-    .p-menubar
-      .p-menubar-root-list
-      > .p-menuitem:not(.p-highlight):not(.p-disabled)
-      > .p-menuitem-content:hover
-      .p-menuitem-link
-      .p-menuitem-text {
-      color: #ffffff;
-      background: #ffae34;
-    }
-  
-    //Hover icone que nao tem dropdown
-    .p-menubar
-      .p-menubar-root-list
-      > .p-menuitem:not(.p-highlight):not(.p-disabled)
-      > .p-menuitem-content:hover
-      .p-menuitem-link
-      .p-menuitem-icon,
-    .p-menubar
-      .p-menubar-root-list
-      > .p-menuitem:not(.p-highlight):not(.p-disabled)
-      > .p-menuitem-content:hover
-      .p-menuitem-link
-      .p-submenu-icon {
-      color: #ffffff;
-      background: #ffae34;
-    }
-  
-    //item selecionado no focus
-    .p-menubar .p-menuitem.p-highlight.p-focus > .p-menuitem-content {
-      background: #ffae34;
-    }
-  
-    //toda area selecionado, "onFocus"
-    .p-menubar
-      .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-      > .p-menuitem-content {
-      color: #f3f4f6;
-      background: transparent;
-    }
-  
-    //label principal selecionado, "onFocus"
-    .p-menubar
-      .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-      > .p-menuitem-content
-      .p-menuitem-link
-      .p-menuitem-text {
-      color: #f3f4f6;
-    }
-  
-    //icones principais selecionado, "onFocus"
-    .p-menubar
-      .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-      > .p-menuitem-content
-      .p-menuitem-link
-      .p-menuitem-icon,
-    .p-menubar
-      .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-      > .p-menuitem-content
-      .p-menuitem-link
-      .p-submenu-icon {
-      color: #f3f4f6;
-    }
-  
-    //Hover sobre o itens dropdown
-    .p-menubar
-      .p-menuitem:not(.p-highlight):not(.p-disabled)
-      > .p-menuitem-content:hover {
-      color: #ffae34;
-      background: #f3f4f6;
-    }
-  
-    //cor do texto do menu do dropdown
-    .p-menubar
-      .p-menuitem:not(.p-highlight):not(.p-disabled)
-      > .p-menuitem-content:hover
-      .p-menuitem-link
-      .p-menuitem-text {
-      color: #ffae34;
-    }
-  
-    //cor do icone do menu do dropdown
-    .p-menubar
-      .p-menuitem:not(.p-highlight):not(.p-disabled)
-      > .p-menuitem-content:hover
-      .p-menuitem-link
-      .p-menuitem-icon,
-    .p-menubar
-      .p-menuitem:not(.p-highlight):not(.p-disabled)
-      > .p-menuitem-content:hover
-      .p-menuitem-link
-      .p-submenu-icon {
-      color: #ffae34;
+      max-width: 200px;
     }
   }
-  
