--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,12 +1,7 @@
-header {
-    position: relative;
-    z-index: 2;
-img {
-    width: 100%;
-    height: 150px;
-    position: absolute;
-    z-index: -1;
-}
+.container{
+  width: 100%;
+  min-height: 10%;
+  background-color: #0075eb;
 }
 
 ::ng-deep {
