--- a/src/app/components/register-user/register-user.component.scss
+++ b/src/app/components/register-user/register-user.component.scss
@@ -1,30 +1,21 @@
 .main-container {
     background: #ffae34;
-    min-height: 100vh;
+    height: 100vh;
     width: 100%;
+    overflow-y: hidden;
   }
   
-  
+
   .body-main {
-    padding-top: 5%;
-
-    .body{
-      display: flex;
-    }
-
+    min-height: 90vh;
+    display: flex;
+    align-items: center;
     h1 {
       width: 100%;
       display: flex;
       justify-content: center;
       font-size: 2.5rem;
       padding-bottom: 10px;
-      color: white;
-    }
-
-    label{
-      font-weight: bold;
-      margin-bottom: 8px;
-      font-size: 16px;
       color: white;
     }
     article {
@@ -43,34 +34,36 @@
             flex-direction: column;
             background-color: #0075eb;
             width: 50%;
-            height: 500px;
+            height: 400px;
             border-radius: 10px;
             gap: 20px;
             padding: 24px;
-            box-shadow: -1px 1px 10px 0px  rgba(0, 0, 0, 0.5);
-
+            box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.5);
             article{
                 justify-content: center;
                 align-items: left;
                 flex-direction: column;
                 height: 20%;
+                gap: 8px;
                 label{
                     display: flex;
                     justify-content: left;
                     width: 100%;
-
+                    font-weight: bold;
+                    color: white;
+                    font-size: 18px;
                 }
                 input,p-multiSelect{
                     width: 100%;
                 }
                 
             }
-        }
-        .btnFooter{
-          display: flex;
-          justify-content: right;
-          width: 100%;
 
+            .btnFooter{
+              width: 100%;
+              display: flex;
+              justify-content: right;
+            }
         }
       }
       .pet-img {
@@ -81,11 +74,3 @@
     }
   }
   
-
-  ::ng-deep{
-    
-    .p-multiselect-label{
-      width: 100%;
-      max-width: 200px;
-    }
-  }
