--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,15 @@
-<router-outlet></router-outlet>
+<div class="container">
+    <div class="banner">
+        <div class="logo">
+            <img src="/images/petShop/My_Pet_Care noBG.png" alt="">
+        </div>
+        <div class="user">
+            <label for="">João Victor </label>
+            <div class="img"></div>
+        </div>
+    </div>
+    <div class="main">
+        <app-header></app-header>
+        <app-body></app-body>
+    </div>
+</div>
