ADD component registerPet

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -51,6 +51,7 @@
     app-body{
         width: 90%;
         z-index: 0;
+        background: #0076eb2b;
     }
 }
 
@@ -97,210 +98,6 @@
   
     .p-dropdown {
       box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.31);
-    }
-  
-    .p-menubar {
-      background: transparent;
-      border: 0px solid #e5e7eb;
-      border-radius: 0px;
-      width: 100%;
-      height: 100%;
-    }
-
-    p-menubarsub{
-      display: flex;
-      height: 100%;
-    }
-
-    .p-menubar-root-list {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-evenly;
-      flex-wrap: wrap;
-  }
-  
-    .p-menubar .p-submenu-list {
-      background: #ffffff;
-      width: 100%;
-    }
-
-
-
-    .p-menuitem{
-      width: 90%;
-      background-color: white;
-      border-radius: 10px;
-      box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.31);
-    }
-  
-    .p-menuitem-text {
-      font-size: 1rem;
-      font-weight: bold;
-      color: #1d4ed8;
-    }
-    .p-menuitem-icon {
-      font-size: 1rem;
-      margin-right: 5px;
-      color: #1d4ed8;
-    }
-
-    .p-submenu-icon {
-      font-size: .5rem;
-      color: #1d4ed8;
-    }
-  
-    .p-menubar .p-menuitem-link {
-      align-items: baseline;
-      justify-content: center;    
-      height: 40px;
-      width: 100%;
-      // padding: 0 12px;
-    }
-  
-    .p-menubar .p-submenu-list {
-      padding: 0 0;
-      background: #0075eb;
-      border: 1px solid #ffffff;
-      box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
-      width: 100%;
-      border-radius: 6px;
-      
-      .p-menuitem{
-        width: 100%;
-        background-color: transparent;
-        border-radius: none;
-        box-shadow: none;
-      }
-      .p-menuitem-text {
-        font-size: 1rem;
-        font-weight: normal;
-        color: rgb(255, 255, 255);
-      }
-      .p-menuitem-icon {
-        font-size: 1rem;
-        margin-right: 5px;
-        color: #ffffff;
-      }
-      
-    }
-  
-    //Hover sobre a opcao que tem dropdown
-    .p-menubar .p-menuitem.p-highlight > .p-menuitem-content {
-      transition: 1s;
-      background: #ffae34;
-      border-radius: 10px;
-    }
-    .p-menuitem-active .p-menuitem-text,.p-menuitem-active .p-menuitem-icon  {
-      color: #ffffff;
-    }
-    .p-menuitem-active .p-menuitem-text,.p-menuitem-active .p-submenu-icon  {
-      color: #ffffff;
-    }
-  
-    //Hover sobre a opcao que nao tem dropdown
-    .p-menubar
-      .p-menubar-root-list
-      > .p-menuitem:not(.p-highlight):not(.p-disabled)
-      > .p-menuitem-content:hover {
-      color: #ffffff;
-      background: #ffae34;
-      border-radius: 10px;
-    }
-  
-    //Hover texto que nao tem dropdown
-    .p-menubar
-      .p-menubar-root-list
-      > .p-menuitem:not(.p-highlight):not(.p-disabled)
-      > .p-menuitem-content:hover
-      .p-menuitem-link
-      .p-menuitem-text {
-      color: #ffffff;
-      background: transparent;
-    }
-  
-    //Hover icone que nao tem dropdown
-    .p-menubar
-      .p-menubar-root-list
-      > .p-menuitem:not(.p-highlight):not(.p-disabled)
-      > .p-menuitem-content:hover
-      .p-menuitem-link
-      .p-menuitem-icon,
-    .p-menubar
-      .p-menubar-root-list
-      > .p-menuitem:not(.p-highlight):not(.p-disabled)
-      > .p-menuitem-content:hover
-      .p-menuitem-link
-      .p-submenu-icon {
-      color: #ffffff;
-      background: #ffae34;
-    }
-  
-    //item selecionado no focus
-    .p-menubar .p-menuitem.p-highlight.p-focus > .p-menuitem-content {
-      background: #ffae34;
-    }
-  
-    //toda area selecionado, "onFocus"
-    .p-menubar
-      .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-      > .p-menuitem-content {
-      color: #f3f4f6;
-      background: transparent;
-    }
-  
-    //label principal selecionado, "onFocus"
-    .p-menubar
-      .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-      > .p-menuitem-content
-      .p-menuitem-link
-      .p-menuitem-text {
-      color: #1d4ed8;
-    }
-  
-    //icones principais selecionado, "onFocus"
-    .p-menubar
-      .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-      > .p-menuitem-content
-      .p-menuitem-link
-      .p-menuitem-icon,
-    .p-menubar
-      .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus
-      > .p-menuitem-content
-      .p-menuitem-link
-      .p-submenu-icon {
-      color: #1d4ed8;
-    }
-  
-    //Hover sobre o itens dropdown
-    .p-menubar
-      .p-menuitem:not(.p-highlight):not(.p-disabled)
-      > .p-menuitem-content:hover {
-      color: #ffae34;
-      background: #f3f4f6;
-    }
-  
-    //cor do texto do menu do dropdown
-    .p-menubar
-      .p-menuitem:not(.p-highlight):not(.p-disabled)
-      > .p-menuitem-content:hover
-      .p-menuitem-link
-      .p-menuitem-text {
-      color: #ffae34;
-    }
-  
-    //cor do icone do menu do dropdown
-    .p-menubar
-      .p-menuitem:not(.p-highlight):not(.p-disabled)
-      > .p-menuitem-content:hover
-      .p-menuitem-link
-      .p-menuitem-icon,
-    .p-menubar
-      .p-menuitem:not(.p-highlight):not(.p-disabled)
-      > .p-menuitem-content:hover
-      .p-menuitem-link
-      .p-submenu-icon {
-      color: #ffae34;
     }
   }
 
