--- a/src/app/components/body/home/home.component.html
+++ b/src/app/components/body/home/home.component.html
@@ -65,6 +65,9 @@
 			<img src="images/petShop/Dog.svg" alt="" class="pet-img">
 
 		</article>
+		<div class="footer">
+
+		</div>
 	</div>
 
 </section>
