--- a/src/app/components/body/home/home.component.scss
+++ b/src/app/components/body/home/home.component.scss
@@ -1,6 +1,6 @@
 .main-container {
-  background: #ffffff;
   width: 100%;
+  height: 100%;
 }
 
 header {
@@ -20,9 +20,10 @@ header {
     width: 100%;
     display: flex;
     justify-content: center;
-	font-size: 2.5rem;
+	  font-size: 2.5rem;
     padding-bottom: 10px;
-	color: white;
+	  color: #0075eb;
+    letter-spacing: 2px;
   }
   article {
     display: flex;
@@ -40,4 +41,12 @@ header {
       margin: 10px auto;
     }
   }
+}
+
+
+
+
+
+.patas-bg {
+
 }
