--- a/src/app/components/body/register-user/register-user.component.scss
+++ b/src/app/components/body/register-user/register-user.component.scss
@@ -1,5 +1,4 @@
 .main-container {
-    height: 100vh;
     width: 100%;
     overflow-y: hidden;
   }
@@ -33,7 +32,7 @@
             flex-direction: column;
             background-color: #0075eb;
             width: 50%;
-            height: 400px;
+            height: 100%;
             border-radius: 10px;
             gap: 20px;
             padding: 24px;
