--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,9 @@
 @import "primeng/resources/primeng.css";
 @import url('https://fonts.googleapis.com/css2?family=Jua:wght@400&display=swap');
 @import "primeicons/primeicons.css";
-
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Italiana&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 *{
 	margin: 0;
 	box-sizing: border-box;
-	font-family: sans-serif;
+	font-family:'Roboto' ,sans-serif;
 }
