--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,23 @@
 	box-sizing: border-box;
 	font-family:'Roboto' ,sans-serif;
 }
+
+
+#loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffae34;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+	flex-direction: column;
+    z-index: 9999;
+}
+
+#loading-screen img{
+	width: 15%;
+}
+
