--- a/src/app/components/body/registros/register-user/register-user.component.html
+++ b/src/app/components/body/registros/register-user/register-user.component.html
@@ -14,7 +14,17 @@
                     <label for="">Email:</label>
                     <input type="text" pInputText formControlName="email" />
                 </article>
-                
+
+                <article>
+                    <label for="">CPF:</label>
+                    <input type="text" pInputText formControlName="CPF" />
+                </article>
+
+                <article>
+                    <label for="">telefone:</label>
+                    <input type="text" pInputText formControlName="telefone" />
+                </article>
+
                 <p-button type="button" class="btnFooter" label="Registrar" [raised]="true" (click)="registerUser()" />
             </form>
         
