--- a/src/app/components/body/home/home.component.scss
+++ b/src/app/components/body/home/home.component.scss
@@ -1,52 +1,63 @@
 .main-container {
   width: 100%;
   height: 100%;
-}
-
-header {
-  position: relative;
-  z-index: 2;
-  img {
-    width: 100%;
-    height: 150px;
-    position: absolute;
-    z-index: -1;
-  }
+  padding: 16px 24px;
 }
 
 .body-main {
-  padding-top: 5%;
-  h1 {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-	  font-size: 2.5rem;
-    padding-bottom: 10px;
-	  color: #0075eb;
-    letter-spacing: 2px;
-  }
-  article {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 
     .container {
-      width: 70%;
+      width: 100%;
+      max-height: 90vh;
+      background-color: white;
+      padding: 16px;
+      box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.31);
+      border-radius: 10px;
     }
-    .pet-img {
-      width: 250px;
-      height: auto;
-      margin: 10px auto;
+
+    .header{
+      padding-bottom: 8px;
+      display: flex;
+      justify-content: space-between;
+
+      h1 {
+        font-size: 2.5rem;
+        color: #0075eb;
+      }
+
+      .p-input-icon-right i{
+        position: absolute;
+        top: 35%; 
+        right: 10px; 
+        font-size: 1rem;
+      }
+    }
+
+  .link{
+    font-weight: bold;
+    color: #0075eb;
+    text-decoration: underline;
+    text-transform: uppercase;
+    cursor: pointer;
+  }
+
+  .link:hover{
+    color: #ffae34;
+  }
+
+  ::ng-deep{
+    .btnExcluir{
+      .p-button:hover {
+        background: red;
+        color: #ffffff;
+        border-color: red;
+      }
     }
   }
-}
 
-
-
-
-
-.patas-bg {
-
+  
 }
