--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -53,6 +53,12 @@
         z-index: 0;
         background: #F2F3F8;
     }
+
+    app-login{
+      width: 100%;
+      z-index: 0;
+      background: #F2F3F8;
+  }
 }
 
 }
