--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,8 +1,7 @@
 .container{
     min-height: 100vh;
     width: 100%;
-    background-color: #F2F3F8;
-    background-color: blue;
+    background-color: #0075eb;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -11,20 +10,107 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: red;
-        padding: 12px;
-        height: 500px;
-        width: 30%;
+        background-color: white;
+        height: 600px;
+        width: 50%;
+        -webkit-box-shadow: 0px 0px 6px -1px #000000; 
+        box-shadow: 0px 0px 6px -1px #000000;
+        border-radius: 10px;
+
+        .body{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 10px;
+
+            .infos{
+                width: 50%;
+                height: 100%;
+                background-color: #ffae34;
+                border-radius: 10px 0px 0px 10px;
+            }
+
+            .right{
+                display: flex;
+                flex-direction: column;
+                width: 50%;
+                padding: 16px;
+                height: 100%;
+                background-color: #F2F3F8;
+                gap: 24px;
+                padding: 12px;
+                border-radius: 10px;
+
+                .header{
+                    height: 40%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: end;
+                    align-items: center;
+                    
+                    .img{
+                        display: flex;
+                        height: 50%;
+                        align-items: center;
+                        img{
+                            width: 200px;
+                        }
+                    }
+                    h1{
+                        width: 80%;
+                        font-size: 32px;
+                        font-weight: 400;
+                    }
+                }
+
+                .forms{
+                    height: 60%;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+
+                    h2{
+                        display: flex;
+                        justify-content: center;
+                        font-weight: 400;
+                    }
+
+                    form{
+                        width: 80%;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 24px;
+                    }
+                    
+                }
+
+                .p-inputtext{
+                    padding: 0.75rem 0rem;
+                    width: 100%;
+                }
+
+                #senha{
+                    display: flex;
+                    width: 100%;
+                    .p-inputtext{
+                        padding: 0.75rem 0rem;
+                        width: 100%;
+                    }
+                }
+
+                .p-inputtext .p-component .p-element .p-password-input{
+                    display: flex;
+                    width: 100%;
+                }
+
+
+            }
+        
+
+        } 
     }
 
-    .body{
-        background-color: green;
-        width: 90%;
-        height: 90%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: 1px solid black;
-    }
-    
 }
