--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,7 @@
 @import "primeng/resources/primeng.css";
 @import url('https://fonts.googleapis.com/css2?family=Jua:wght@400&display=swap');
 @import "primeicons/primeicons.css";
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Italiana&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Italiana&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Shrikhand&display=swap');
 *{
 	margin: 0;
 	box-sizing: border-box;
@@ -17,13 +16,22 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #ffae34;
+    background-color: #0075eb;
     display: flex;
     align-items: center;
     justify-content: center;
 	flex-direction: column;
     z-index: 9999;
+
+    #title{
+        font-size: 64px;
+        font-style: italic;
+        color: white;
+        font-weight: bold;
+    }
 }
+
+
 
 #loading-screen img{
 	width: 15%;
