ajustes tela de login

--- a/src/app/components/body/registros/register-user/register-user.component.html
+++ b/src/app/components/body/registros/register-user/register-user.component.html
@@ -1,7 +1,7 @@
 <section class="main-container">
     <div class="body-main">
     <article class="body">
-        <img src="images/petShop/Cat.svg" alt="" class="pet-img">
+        <img src="images/Cat.svg" alt="" class="pet-img">
         <div class="container">
             <form [formGroup]="formUserRegister">
                 <h1>Registrar Cliente</h1>
@@ -29,7 +29,7 @@
             </form>
         
         </div>
-        <img src="images/petShop/Dog.svg" alt="" class="pet-img">
+        <img src="images/Dog.svg" alt="" class="pet-img">
 
     </article>
 </div>
