--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
 *{
 	margin: 0;
 	box-sizing: border-box;
-	font-family:'Times New Roman', Times, serif ,sans-serif;
+	font-family:'Roboto', Times, serif ,sans-serif;
 }
 
 
