--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div class="container" *ngIf="usuarioLogado">
     <div class="banner">
         <div class="logo">
-            <img src="/images/petShop/My_Pet_Care noBG.png" alt="">
+            <img src="/images/My_Pet_Care noBG.png" alt="">
         </div>
         <div class="user">
             <label for="">João Victor </label>
