--- a/src/app/components/body/registros/register-pet/register-pet.component.html
+++ b/src/app/components/body/registros/register-pet/register-pet.component.html
@@ -1,7 +1,7 @@
 <section class="main-container">
     <div class="body-main">
     <article class="body">
-        <img src="images/petShop/Cat.svg" alt="" class="pet-img">
+        <img src="images/Cat.svg" alt="" class="pet-img">
         <div class="container">
             <form [formGroup]="formPetRegister">
                 <h1>Registrar PET</h1>
@@ -39,7 +39,7 @@
             </form>
         
         </div>
-        <img src="images/petShop/Dog.svg" alt="" class="pet-img">
+        <img src="images/Dog.svg" alt="" class="pet-img">
 
     </article>
 </div>
