--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-login *ngIf="!usuarioLogado" (liberarAcesso)="onLoginSuccess($event)"></app-login>
+<app-login *ngIf="usuarioLogado" (liberarAcesso)="onLoginSuccess($event)"></app-login>
 
-<div class="container" *ngIf="usuarioLogado">
+<div class="container" *ngIf="!usuarioLogado">
     <div class="banner">
         <div class="logo">
             <img src="/images/My_Pet_Care noBG.png" alt="">
