--- a/src/app/components/body/home/home.component.scss
+++ b/src/app/components/body/home/home.component.scss
@@ -10,6 +10,25 @@
   width: 100%;
   height: 100%;
 
+  .contadores{
+    width: 100%;
+    height: 10%;
+    margin-bottom: 16px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    .boxCont{
+      background-color: white;
+      padding: 16px;
+      box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.31);
+      border-radius: 10px;
+      width: 30%;
+      height: 90%;
+    }
+  }
+
     .container {
       width: 100%;
       max-height: 90vh;
@@ -17,7 +36,6 @@
       padding: 16px;
       box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.31);
       border-radius: 10px;
-    }
 
     .header{
       padding-bottom: 8px;
@@ -25,7 +43,7 @@
       justify-content: space-between;
 
       h1 {
-        font-size: 2.5rem;
+        font-size: clamp(1.8rem, 4vw, 2rem);
         color: #0075eb;
       }
 
@@ -58,6 +76,8 @@
       }
     }
   }
+
+}
 
   
 }
