--- a/src/app/components/body/home/home.component.scss
+++ b/src/app/components/body/home/home.component.scss
@@ -11,12 +11,12 @@
   height: 100%;
 
   .contadores{
-    width: 100%;
+    width: 20%;
     height: 10%;
     margin-bottom: 16px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    gap: 16px;
     align-items: center;
 
     .boxCont{
@@ -24,14 +24,29 @@
       padding: 16px;
       box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.31);
       border-radius: 10px;
-      width: 30%;
-      height: 90%;
+      width: 100%;
+      height: 70%;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+
+      .type{
+        font-size: clamp(1.2rem, 4vw, 1.4rem);
+        color: #0075eb;
+        font-weight: 400;
+      }
+      .number{
+          font-size: clamp(1.2rem, 4vw, 1.4rem);
+          color: #0075eb;
+          font-weight: 700;
+      }
+
     }
   }
 
     .container {
       width: 100%;
-      max-height: 90vh;
+      max-height: 80vh;
       background-color: white;
       padding: 16px;
       box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.31);
@@ -43,8 +58,9 @@
       justify-content: space-between;
 
       h1 {
-        font-size: clamp(1.8rem, 4vw, 2rem);
+        font-size: clamp(1.4rem, 4vw, 1.8rem);
         color: #0075eb;
+        font-weight: 400;
       }
 
       .p-input-icon-right i{
@@ -75,6 +91,15 @@
         border-color: red;
       }
     }
+
+    .p-datatable .p-datatable-thead > tr > th {
+      padding: 0.745rem 1rem;
+    }
+
+    .p-datatable .p-datatable-tbody > tr> td {
+      padding: 0.445rem 1rem;
+    }
+    
   }
 
 }
