--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,10 @@
 	font-family:'Roboto', Times, serif ,sans-serif;
 }
 
+html{
+    overflow: hidden;
+}
+
 
 #loading-screen {
     position: fixed;
