--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -64,7 +64,7 @@
   .p-menubar .p-menuitem-link {
     align-items:baseline;
     justify-content: left;    
-    height: 40px;
+    text-align: left;
     width: 100%;
 
   }
